# serde-stream-xml

./: Cargo.toml  README.md  beh.xml
examples/: json.rs
src/: element.rs  element_builder.rs  lib.rs  parser.rs
