[package]
name = "RustyXML"
version = "0.3.0"
authors = [ "Florian Zeitz <florob@babelmonkeys.de>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/Florob/RustyXML"
repository = "https://github.com/Florob/RustyXML"
documentation = "https://docs.babelmonkeys.de/RustyXML/xml/"
description = "A SAX-like streaming XML parser, and a DOM-like interface based on that"
keywords = [ "XML", "parser" ]
readme = "README.md"
edition = "2018"

[lib]
name = "xml"

[dependencies]
indexmap = { version = "1.7.0", optional = true }
serde = { version = "1.0.200", features = ["derive"] }
tracing = "0.1.41"

[features]
ordered_attrs = ["indexmap"]
bench = []

[dev-dependencies]
anyhow = "1.0.83"
serde_json = "1.0.116"
serde_test = "1.0.177"
